@@ -1,4 +1,4 @@
-AUX gentoo.nanorc 2562 RMD160 0393e14c2b285b23e06e3dbdeddd45ebfb63edba SHA1 31c3888ef7e3f896e773150c1f9ecbdc836e4f64 SHA256 5217c218833b8fb4e57e52a30fee6c6615e3aada995ed0d2178a93b4d9b4a9c5
+AUX gentoo.nanorc 2578 RMD160 65460270bc9e9e8041570124ccc510311761403d SHA1 e431cc0c034c354817a553a859e9256da1f31211 SHA256 82318b18536d3113238b91a2ed1d42aead0c6080492c540a4f8fdddccd8bbbd4
 AUX nano-1.3.12-fix2.patch 481 RMD160 8c86b8bed823db226e5c7492c4bcd371e3ec6619 SHA1 96eb32aad43f86d51a67e3cd218b77bf01f64d95 SHA256 4c074af7006e583c0d5a3e8f25a13dc511200cf771934f75a464669dbb73eab1
 AUX nano-1.3.12-path.patch 6465 RMD160 9e7777d4bb908f83c65d50d833a011025c676379 SHA1 a97ea431823d2336c9946d856168799d54333e7a SHA256 ebc54d890a3d2ab8c435b4cee3790e8920c055db9fce86312e8ab1457bfdf721
 AUX nano-1.3.12-scroll.patch 1357 RMD160 0ff451539b959ed1b48995cacec0ee5938f51390 SHA1 c6da5900c9fa9d017d90301e978e3dda991949d4 SHA256 5f44b124d829c3a1d98be782de90728e425e8cd8c7fac73fe36c8dfaa97d4773
@@ -8,7 +8,7 @@ DIST nano-2.0.4.tar.gz 1313903 RMD160 f39b6f917dee9abc3245c6d1ff2b786c9efc55eb S
 DIST nano-2.0.6.tar.gz 1315207 RMD160 858dc7cf7137cc2b19e9084a503fe508ef734381 SHA1 00102580404cdb1c8594e5f6193000d5acac2249 SHA256 0d10d8f70a6fadfb9cfaa7b66c5fe7eba17e64ecb96104c4ddedc82f89765d5c
 EBUILD nano-1.3.12-r1.ebuild 2063 RMD160 c61792871c2f1badd3bf28e18d5ac69d20507b43 SHA1 56c1c9a64ed33f72866108669597b31e2e8309bf SHA256 07b72dc68e9f26d3332790bafe4030c5c4d8da0d716008358a9e219412ecaa6d
 EBUILD nano-2.0.3.ebuild 1994 RMD160 31e44069269f41c4d5990b3a2a11d9f61dc211db SHA1 8dd02101ad223111e32b4b07a397b4c7f98720db SHA256 0fa67542efec0c00bb7addbcbc69484a710de53a13c8adbdf0ab89bc4a611249
-EBUILD nano-2.0.4.ebuild 1991 RMD160 ff911acecd819906d66b6e065086fb6610092538 SHA1 6d0391b1456ea49f94fc415067805265dd87ef96 SHA256 4e52049723cd30a621ca68940e76f2376d54d1f3a3d67dc25714743b9ba09b11
-EBUILD nano-2.0.6.ebuild 2034 RMD160 f9f001303d70d6cbd66688e122c737fa07f6311f SHA1 1ea25b6d844d2358417a4e62c8f88d997d831849 SHA256 0eda7749bb27c11def0a5d8e9e50c3a156c20fad2a86c54598e68c8b258bb774
-MISC ChangeLog 18753 RMD160 e5217b26a5db829c2de0ad1f170d59861716901c SHA1 d7a1459194289387f9c9e13f5d9114b9d2e73642 SHA256 3a55ca94c8ea168b262dca31cc2c13e020746f484cb594f5e9313d39ae0b5c5b
+EBUILD nano-2.0.4.ebuild 1994 RMD160 0b5ebea07adfd711a441719ad541b66e8cf15cc8 SHA1 a7b6a1359a7efaf112e00b59e6a2c51d2cdd8b1a SHA256 66dce387a0f6df21e27f8c9dd92650516b82f73cfb7f15def41836d720098185
+EBUILD nano-2.0.6.ebuild 2008 RMD160 5c5eb587508243ae2b4f60cd2ce20f052dcdc383 SHA1 a81eb2b3bb2881f10fc94f60fea68048fda1da54 SHA256 e6bf24221466085dea55b2fa46389b69915dd4a53136945b757f16045fb6f129
+MISC ChangeLog 18962 RMD160 f2a19bf22a2dc18609273bfcf08dd5a098b6e667 SHA1 aee8b832f70bf9dd88ed837335d981f2d6b7f832 SHA256 eecdc076d98e52ba5a83b24041564e3ea4e9f5434176642fe64f53be3418663e
 MISC metadata.xml 986 RMD160 1ee17789653e837a9a8599d409ebe5a4dbc521c7 SHA1 d75a4da179e63c122a065f6d17f1871ee762040b SHA256 6275a0f662182b053119dda8ce016bf860aa75813c179a951b253fb9f5caef6b
